# highPerformance2

./: CMakeLists.txt  Makefile  const.h  file.c  file.h  high_life.c  high_life.h  main.c  mpi.c  mpi.h  utils.c  utils.h
